--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,24 @@
 * {
   box-sizing: border-box;
 }
-.list {
+.container {
+  width: 1440px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+ul {
+  padding-left: 0;
   list-style: none;
+}
+.list {
+  margin: 0;
 }
 .link {
   text-decoration: none;
@@ -27,8 +43,12 @@ body {
   color: var(--text-color);
   letter-spacing: 0.02em;
   background: #ffffff;
+  margin: 0px;
 }
-
+.header {
+  padding: 24px 156px 24px 156px;
+  margin: 0px;
+}
 .logo-web {
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -80,14 +100,19 @@ body {
 /* main-content */
 .hero {
   background: var(--color-tx-ourworkers);
+  width: 1440px;
+  height: 600px;
+  margin: 0px;
 }
 .hero-title {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
 
+  padding: 188px 473px 48px 473px;
   letter-spacing: 0.02em;
   color: var(--text-color-hero);
+  margin: 0px;
 }
 .hero-button {
   cursor: pointer;
@@ -101,6 +126,7 @@ body {
   color: var(--text-color-hero);
   padding: 16px 32px;
   letter-spacing: 0.04em;
+  margin-left: 636px;
 }
 .hero-button:hover {
   background: #404bbf;
